--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "react-native-button": "^1.7.1",
     "react-native-router-flux": "^3.37.0",
     "redux-saga": "0.14.3",
-    "redux":"3.6.0",
-    "invariant":"2.2.2",
-    "react-redux":"5.0.2",
-    "native-base":"2.0.5"
+    "redux": "3.6.0",
+    "invariant": "2.2.2",
+    "react-redux": "5.0.2",
+    "native-base": "2.0.5"
   },
   "devDependencies": {
+    "remote-redux-devtools": "^0.5.7",
     "tslint": "^4.4.2",
     "typescript": "^2.1.5",
     "typings": "^2.1.0"
