--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "build": "tsc"
   },
   "dependencies": {
-    "react": "^15.4.2",
+    "invariant": "2.2.2",
+    "native-base": "2.0.5",
+    "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-button": "^1.7.1",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-router-flux": "^3.37.0",
-    "redux-saga": "0.14.3",
-    "redux": "3.6.0",
-    "invariant": "2.2.2",
     "react-redux": "5.0.2",
-    "native-base": "2.0.5",
-    "redux-actions":"1.2.1"
+    "redux": "3.6.0",
+    "redux-actions": "1.2.1",
+    "redux-saga": "0.14.3"
   },
   "devDependencies": {
     "remote-redux-devtools": "^0.5.7",
