--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "invariant": "2.2.2",
+    "jssha": "^2.2.0",
     "native-base": "2.0.5",
     "react": "15.4.2",
     "react-native": "0.41.2",
