--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "invariant": "2.2.2",
     "jssha": "1.6.0",
     "native-base": "2.0.5",
+    "node-dijkstra": "^2.3.0",
+    "pngjs-draw": "0.0.6",
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-art-svg": "2.0.0",
     "react-native-button": "^1.7.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-circular-progress": "0.0.8",
+    "react-native-fs": "^2.1.0-rc.1",
+    "react-native-image-pan-zoom": "^1.1.12",
     "react-native-router-flux": "^3.37.0",
+    "react-native-svg": "^5.1.5",
     "react-redux": "5.0.2",
     "redux": "3.6.0",
     "redux-actions": "1.2.1",
-    "redux-saga": "0.14.3",
-    "react-native-circular-progress": "0.0.8"
+    "redux-saga": "0.14.3"
   },
   "devDependencies": {
     "remote-redux-devtools": "^0.5.7",
