--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-fs": "^2.1.0-rc.1",
     "react-native-image-pan-zoom": "^1.1.12",
     "react-native-router-flux": "^3.38.0",
-    "react-native-svg": "^4.5.0",
+    "react-native-svg": "5.1.3",
     "react-redux": "5.0.2",
     "redux": "3.6.0",
     "redux-actions": "1.2.1",
