--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "prebuild": "rm -rf build",
-    "build": "tsc"
+    "build": "tsc",
+    "cpImage": "sudo cp -r src/utils/images/*.png build/utils/images"
   },
   "dependencies": {
     "invariant": "2.2.2",
@@ -18,15 +19,15 @@
     "native-base": "2.0.5",
     "node-dijkstra": "^2.3.0",
     "pngjs-draw": "0.0.6",
-    "react": "15.4.2",
-    "react-native": "0.41.2",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.45.1",
     "react-native-button": "^1.7.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-circular-progress": "0.0.8",
     "react-native-fs": "^2.1.0-rc.1",
     "react-native-image-pan-zoom": "^1.1.12",
     "react-native-router-flux": "^3.38.0",
-    "react-native-svg": "5.1.3",
+    "react-native-svg": "5.2.0",
     "react-redux": "5.0.2",
     "redux": "3.6.0",
     "redux-actions": "1.2.1",
